# pico-freertos-vscode

./: .gitignore  CMakeLists.txt  main.c  readme.md
cmake_stuff/freertos/: FreeRTOSConfig.h
